<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="taskAddViewModel"
            type="com.example.android.todolistapplication.taskadd.TaskAddViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pink_purple"
        tools:context=".taskadd.TaskAddFragment">

        <Button
            android:id="@+id/button_back_from_task_add"
            style="@style/style_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_background_no_color"
            android:backgroundTint="@color/purple"
            android:fontFamily="@font/montserrat"
            android:onClick="@{() -> taskAddViewModel.onClickBackButton()}"
            android:text="@string/button_back"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_submit_task"
            style="@style/style_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_background_no_color"
            android:backgroundTint="@color/dark_purple"
            android:fontFamily="@font/montserrat"
            android:onClick="@{() -> taskAddViewModel.onSubmit()}"
            android:text="@string/button_add_task"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_back_from_task_add" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_back_from_task_add">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp">

                <EditText
                    android:id="@+id/editTextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="12dp"
                    android:autofillHints="title"
                    android:background="@drawable/rounded_background_form_input"
                    android:fontFamily="@font/montserrat"
                    android:gravity="start|center"
                    android:hint="@string/task_title"
                    android:inputType="textMultiLine"
                    android:minHeight="50sp"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:autofillHints="description"
                    android:background="@drawable/rounded_background_form_input"
                    android:fontFamily="@font/montserrat"
                    android:gravity="start|top"
                    android:hint="@string/task_description"
                    android:inputType="textMultiLine"
                    android:minHeight="200sp"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>