<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_centerHorizontal="false">

    <data>

        <variable
            name="taskListViewModel"
            type="com.example.android.todolistapplication.tasklist.TaskListViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pink_purple"
        tools:context=".tasklist.TaskListFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:padding="3dp"
            android:text="@{taskListViewModel.response}"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="response" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_tasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="50dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/empty_list_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/empty_list_label"
            android:textSize="16sp"
            android:textStyle="italic|bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view_tasks" />

        <Button
            android:id="@+id/button_clear_all_tasks"
            style="@style/style_button"
            android:background="@drawable/rounded_background_no_color"
            android:fontFamily="@font/montserrat"
            android:onClick="@{() -> taskListViewModel.onClearAllTasks()}"
            android:text="@string/button_clear_tasks"
            android:textColor="@color/white"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/button_add_new_task"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_add_new_task"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_add_new_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:contentDescription="@string/button_add_task"
            android:focusable="true"
            android:onClick="@{() -> taskListViewModel.onAddNewTask()}"
            app:backgroundTint="@color/dark_purple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:maxImageSize="40dp"
            app:srcCompat="@drawable/plus_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>