<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="taskEditViewModel"
            type="com.example.android.todolistapplication.taskedit.TaskEditViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pink_purple"
        tools:context=".taskedit.TaskEditFragment">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/task_detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@{taskEditViewModel.task.title}"
                    android:textColor="@color/dark_purple"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="test_title" />

                <EditText
                    android:id="@+id/task_detail_title_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:autofillHints="Title"
                    android:background="@color/transparent"
                    android:fontFamily="@font/montserrat"
                    android:gravity="start|center"
                    android:hint="@{taskEditViewModel.task.title}"
                    android:inputType="textMultiLine"
                    android:minHeight="48dp"
                    android:text="@{taskEditViewModel.task.title}"
                    android:textColor="#37474F"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    tools:text="test_title_edit" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/light_purple_lower_contrast" />

                <TextView
                    android:id="@+id/task_detail_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@{taskEditViewModel.task.description}"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:text="test_description" />

                <EditText
                    android:id="@+id/task_detail_description_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:autofillHints="Description"
                    android:background="@color/transparent"
                    android:fontFamily="@font/montserrat"
                    android:gravity="start|top"
                    android:hint="@{taskEditViewModel.task.description}"
                    android:inputType="textMultiLine"
                    android:minHeight="48dp"
                    android:text="@{taskEditViewModel.task.description}"
                    android:textColor="#263238"
                    android:textSize="16sp"
                    android:visibility="gone"
                    tools:text="test_description_edit" />

                <TextView
                    android:id="@+id/task_detail_creationDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@{taskEditViewModel.taskCreationDateFormatted}"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    tools:text="test_creationDate" />

            </LinearLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_delete_new_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:contentDescription="@string/button_delete_task"
            android:focusable="true"
            android:onClick="@{() -> taskEditViewModel.onDeleteTask()}"
            android:src="@drawable/trashcan_icon"
            app:backgroundTint="@color/dark_purple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:maxImageSize="30dp" />

        <Button
            android:id="@+id/button_back_from_task_edit"
            style="@style/style_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background_no_color"
            android:backgroundTint="@color/purple"
            android:fontFamily="@font/montserrat"
            android:onClick="@{() -> taskEditViewModel.onClickBackButton()}"
            android:text="@string/button_back"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/button_delete_new_task"
            app:layout_constraintEnd_toStartOf="@+id/button_add_new_task"
            app:layout_constraintStart_toEndOf="@+id/button_delete_new_task"
            app:layout_constraintTop_toTopOf="@+id/button_delete_new_task" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_add_new_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:clickable="true"
            android:contentDescription="@string/button_add_task"
            android:focusable="true"
            android:onClick="@{() -> taskEditViewModel.onEditTask()}"
            android:src="@drawable/edit_icon"
            app:backgroundTint="@color/dark_purple"
            app:layout_constraintBottom_toBottomOf="@+id/button_delete_new_task"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_delete_new_task"
            app:maxImageSize="30dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>